--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Flask>=0.12.2
 Flask-Admin==1.5.0
-Flask-Bootstrap>=2.2.2-1
+Flask-Bootstrap>=3.3.7.0
 Flask-Cache>=0.10.1
 Flask-FlatPages>=0.3
 Flask-Gravatar>=0.2.4
-Flask-Login>=0.1.3
+Flask-Login>=0.4.0
 Flask-Mail>=0.7.4
 Flask-PyMongo>=0.2.1
 Flask-Restless>=0.9.1
