--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ Flask-WTF>=0.14.2
 Jinja2>=2.6
 Markdown>=2.2.1
 PyYAML>=3.10
-SQLAlchemy>=1.2.0b2
+# SQLAlchemy>=1.2.0b2
 WTForms>=1.0.3
 Werkzeug>=0.8.3
 argparse>=1.2.1
